--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-hook-form": "^7.0.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-paper": "^4.7.2",
+    "react-native-root-toast": "^3.2.1",
+    "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "yup": "^0.32.9"
